test/correct/DerivableSyn.hs
type A = Int

data B = B A deriving Show

main = show (B 100)