test/typeerrors/Examples/NoInstance.hs
data A = A

main = show A
